[gd_scene load_steps=8 format=3 uid="uid://cwr6x4fjhl5iv"]

[ext_resource type="Script" uid="uid://ckqfhks2l0kkx" path="res://scripts/zoom_slider.gd" id="1_34omv"]
[ext_resource type="AudioStream" uid="uid://ctgqeapsy5ssj" path="res://resources/sfx/Computer Warble 9.wav" id="1_tdie8"]

[sub_resource type="CanvasTexture" id="CanvasTexture_jeyrk"]

[sub_resource type="CanvasTexture" id="CanvasTexture_tdie8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mhkcm"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0)
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c2jh2"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.21960784, 0.49019608, 0.92156863, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 6
expand_margin_left = 27.0
expand_margin_right = 27.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xsijn"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.21960784, 0.49019608, 0.92156863, 1)
expand_margin_left = 27.0
expand_margin_right = 27.0

[node name="ZoomSlider" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(1, 1.0325232)
script = ExtResource("1_34omv")

[node name="Slider" type="VSlider" parent="."]
layout_mode = 0
offset_left = 708.06134
offset_right = 786.0113
offset_bottom = 707.7464
rotation = -4.712389
theme_override_icons/grabber = SubResource("CanvasTexture_jeyrk")
theme_override_icons/grabber_highlight = SubResource("CanvasTexture_tdie8")
theme_override_styles/slider = SubResource("StyleBoxFlat_mhkcm")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_c2jh2")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_xsijn")
min_value = 0.1
max_value = 1.0
step = 0.05
value = 0.5
tick_count = 10
ticks_position = 3

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_tdie8")

[connection signal="drag_ended" from="Slider" to="." method="_on_slider_drag_ended"]
[connection signal="drag_started" from="Slider" to="." method="_on_slider_drag_started"]
[connection signal="value_changed" from="Slider" to="." method="_on_slider_value_changed"]
